# oop_start

./: README.md
1. mumbling/: CMakeLists.txt  README.md  accum.h  main.cpp
1. mumbling/test/: CMakeLists.txt  unit_test.cpp
2. brace-checker/: BraceChecker.cpp  BraceChecker.h  CMakeLists.txt  README.md  main.cpp
2. brace-checker/test/: CMakeLists.txt  test_brace_checker.cpp
3. unique-strings/: .gitignore  README.md  main.cpp
3. unique-strings/.github/workflows/: test_on_push.yaml
3. unique-strings/test/: test_main.py
4. nearest-element/: CMakeLists.txt  README.md  main.cpp
4. nearest-element/test/: CMakeLists.txt  unit_test.cpp
5. sorted-strings/: CMakeLists.txt  README.md  main.cpp  sortedstrings.cpp  sortedstrings.h
5. sorted-strings/.github/workflows/: test_on_push.yaml
5. sorted-strings/test/: CMakeLists.txt  testgen.py  unit_test.cpp
5. sorted-strings/test/data/: in_100000_4_6.txt  in_10000_4_10.txt  in_10000_4_15.txt  in_10000_4_6.txt  in_1000_4_15.txt  in_100_4_15.txt  in_500000_4_6.txt  out_100000_4_6.txt  out_10000_4_10.txt  out_10000_4_15.txt  out_10000_4_6.txt  out_1000_4_15.txt  out_100_4_15.txt  out_500000_4_6.txt
6. arithmetic-expression-evaluation/: .gitignore  CMakeLists.txt  README.md  calculator.h  main.cpp
6. arithmetic-expression-evaluation/test/: CMakeLists.txt  test_arithmetic.cpp
7. part-of-set/: CMakeLists.txt  README.md  main.cpp  part-of-set.h
7. part-of-set/test/: CMakeLists.txt  custom_class.h  unit_test.cpp
8. sqr/: CMakeLists.txt  README.md  main.cpp  sqr.h
8. sqr/test/: unit_test.cpp
(+10 files in other folders)
